# qdrant-manager

./: .env.example  README.md  pyproject.toml  requirements.txt  setup.bat  setup.ps1  setup.sh
app/: __init__.py  main.py
app/api/: dependencies.py  qdrant_routes.py
app/core/: __init__.py  interfaces.py  settings.py
app/resources/: schemas.py
app/services/: __init__.py  google_gemini.py  orchestrator.py  qdrant.py
